--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "qubiqx/qcommerce-core",
+    "description": "Qcommerce Core",
     "keywords": [
-        ":vendor_name",
+        "Qubiqx",
         "laravel",
-        ":package_slug"
+        "qcommerce-core"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/qubiqx/qcommerce-core",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Robin van Maasakker",
+            "email": "robin@qubiqx.com",
             "role": "Developer"
         }
     ],
@@ -22,25 +22,24 @@
     },
     "require-dev": {
         "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^1.0",
         "orchestra/testbench": "^6.22",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
         "phpunit/phpunit": "^9.5",
         "spatie/laravel-ray": "^1.26"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
-        }
+            "Qubiqx\\QcommerceCore\\": "src",
+            "Qubiqx\\QcommerceCore\\Database\\Factories\\": "database/factories"
+        },
+        "files": [
+            "../qcommerce-core/src/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Qubiqx\\QcommerceCore\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -54,10 +53,26 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Qubiqx\\QcommerceCore\\QcommerceCoreServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "QcommerceCore": "Qubiqx\\QcommerceCore\\Facades\\QcommerceCore",
+                "Sitemap": "Qubiqx\\QcommerceCore\\Classes\\Sitemap",
+                "Helper": "Qubiqx\\QcommerceCore\\Classes\\Helper",
+                "Locales": "Qubiqx\\QcommerceCore\\Classes\\Locales",
+                "Forms": "Qubiqx\\QcommerceCore\\Classes\\Forms",
+                "Menus": "Qubiqx\\QcommerceCore\\Classes\\Menus",
+                "Webshop": "Qubiqx\\QcommerceCore\\Classes\\Webshop",
+                "Sites": "Qubiqx\\QcommerceCore\\Classes\\Sites",
+                "Translation": "Qubiqx\\QcommerceCore\\Models\\Translation",
+                "Customsetting": "Qubiqx\\QcommerceCore\\Models\\Customsetting",
+                "Product": "Qubiqx\\QcommerceCore\\Models\\Product",
+                "Products": "Qubiqx\\QcommerceCore\\Classes\\Products",
+                "Articles": "Qubiqx\\QcommerceCore\\Classes\\Articles",
+                "ProductCategories": "Qubiqx\\QcommerceCore\\Classes\\ProductCategories",
+                "ShoppingCart": "Qubiqx\\QcommerceCore\\Classes\\ShoppingCart",
+                "ShippingZones": "Qubiqx\\QcommerceCore\\Classes\\ShippingZones",
+                "SKUs": "Qubiqx\\QcommerceCore\\Classes\\SKUs"
             }
         }
     },
