--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,31 @@
     "require": {
         "php": "^8.0",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^8.73"
+        "illuminate/contracts": "^8.73",
+        "filament/filament": "^2.0",
+        "doctrine/dbal": "^3.0.0",
+        "wildbit/swiftmailer-postmark": "^3.3",
+        "spatie/laravel-activitylog": "^3.17",
+        "spatie/laravel-medialibrary": "*",
+        "spatie/laravel-cookie-consent": "^2.12",
+        "spatie/laravel-translatable": "^4.6.0",
+        "mollie/laravel-mollie": "^2.13",
+        "intervention/image": "^2.5",
+        "artesaos/seotools": "^0.20.0",
+        "rolandstarke/laravel-thumbnail": "^1.0",
+        "daltcore/lara-pdf-merger": "^2.0",
+        "mcamara/laravel-localization": "^1.3",
+        "barryvdh/laravel-dompdf": "^0.9.0",
+        "hardevine/shoppingcart": "^2.9",
+        "spatie/laravel-sitemap": "^5.8.0",
+        "lukesnowden/google-shopping-feed": "^2.2",
+        "paynl/sdk": "^1.5",
+        "alexusmai/laravel-file-manager": "*",
+        "qubiqx/montapacking": "*",
+        "webwinkelkeur/client": "^1.4",
+        "maatwebsite/excel": "^3.1",
+        "laravel/horizon": "^5.7",
+        "sentry/sentry-laravel": "^2.5"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.10",
