--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,3 @@
 {
-    "/resources/dist/css/app.css": "/resources/dist/css/app.css"
+    "/resources/dist/css/qcommerce-core.css": "/resources/dist/css/qcommerce-core.css"
 }
