--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,7 @@
             ],
             "aliases": {
                 "Sitemap": "Qubiqx\\QcommerceCore\\Classes\\Sitemap",
-                "Account": "Qubiqx\\QcommerceCore\\Classes\\Account",
+                "AccountHelper": "Qubiqx\\QcommerceCore\\Classes\\AccountHelper",
                 "Helper": "Qubiqx\\QcommerceCore\\Classes\\Helper",
                 "Locales": "Qubiqx\\QcommerceCore\\Classes\\Locales",
                 "Forms": "Qubiqx\\QcommerceCore\\Classes\\Forms",
