--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "filament/filament": "2.*",
         "filament/spatie-laravel-media-library-plugin": "^2.0",
         "filament/spatie-laravel-translatable-plugin": "^2.0",
+        "flowframe/laravel-glide": "^0.1.2",
         "hardevine/shoppingcart": "^2.9",
         "illuminate/contracts": "^8.73",
         "intervention/image": "^2.5",
