--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
     ],
     "require": {
         "php": "^8.0",
-        "sentry/sentry-laravel": "^2.5",
         "alexusmai/laravel-file-manager": "*",
         "artesaos/seotools": "^0.20.0",
         "doctrine/dbal": "^3.0.0",
@@ -28,8 +27,10 @@
         "intervention/image": "^2.5",
         "laravel/horizon": "^5.7",
         "mcamara/laravel-localization": "^1.6",
+        "sentry/sentry-laravel": "^2.5",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-cookie-consent": "^2.12",
+        "spatie/laravel-medialibrary": "^9.11",
         "spatie/laravel-package-tools": "^1.9.2",
         "spatie/laravel-sitemap": "^5.8.0",
         "wildbit/swiftmailer-postmark": "^3.3"
