--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "intervention/image": "^2.5",
         "laravel/horizon": "^5.7",
         "mcamara/laravel-localization": "^1.6",
+        "mohamedsabil83/filament-forms-tinyeditor": "^1.1",
         "sentry/sentry-laravel": "^2.5",
         "spatie/laravel-activitylog": "^3.17",
         "spatie/laravel-cookie-consent": "^2.12",
