--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.1",
         "artesaos/seotools": "^0.22",
         "doctrine/dbal": "^3.3",
-        "filament/filament": "2.*",
+        "filament/filament": "^2",
         "filament/spatie-laravel-translatable-plugin": "^2.0",
         "laravel/horizon": "^5.9",
         "mcamara/laravel-localization": "^1.7",
