--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "symfony/http-client": "^6.0",
         "symfony/postmark-mailer": "^6.0",
         "flowframe/laravel-drift": "^0.1.0",
-        "spatie/schema-org": "^3.8",
+        "spatie/schema-org": "^3.8"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.1",
