--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "laravel/horizon": "^5.9",
         "mcamara/laravel-localization": "^1.7",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.5",
-        "awcodes/filament-tiptap-editor": "1.0.4",
+        "awcodes/filament-tiptap-editor": "^1.0",
         "sentry/sentry-laravel": "^2.12",
         "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-cookie-consent": "^3.2",
