--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "mcamara/laravel-localization": "^1.7",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.5",
         "awcodes/filament-tiptap-editor": "^1.0",
-        "sentry/sentry-laravel": "^3.1",
         "spatie/laravel-activitylog": "^4.5",
         "spatie/laravel-cookie-consent": "^3.2",
         "spatie/laravel-package-tools": "^1.11",
@@ -33,7 +32,8 @@
         "symfony/postmark-mailer": "^6.0",
         "flowframe/laravel-drift": "^0.1.0",
         "spatie/schema-org": "^3.8",
-        "psr/simple-cache": "2.0"
+        "psr/simple-cache": "2.0",
+        "spatie/laravel-ignition": "^1.6"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.1",
