--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "flowframe/laravel-drift": "^0.1.0",
         "spatie/schema-org": "^3.8",
         "psr/simple-cache": "2.0",
-        "spatie/laravel-ignition": "^1.6"
+        "spatie/laravel-ignition": "^1.6",
+        "webbingbrasil/filament-2fa": "^1.0"
     },
     "require-dev": {
         "nunomaduro/collision": "^6.1",
