--- a/composer.json
+++ b/composer.json
@@ -16,33 +16,31 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
+        "awcodes/filament-tiptap-editor": "^2.6",
         "doctrine/dbal": "^3.3",
-        "filament/filament": "2.17.8",
-        "filament/spatie-laravel-translatable-plugin": "^2.0",
-        "laravel/horizon": "^5.9",
-        "mcamara/laravel-localization": "^1.7",
-        "mohamedsabil83/filament-forms-tinyeditor": "^1.5",
-        "awcodes/filament-tiptap-editor": "^1.0",
-        "spatie/laravel-activitylog": "^4.5",
+        "filament/filament": "^2.17",
+        "filament/spatie-laravel-translatable-plugin": "^2.17",
+        "flowframe/laravel-drift": "^0.2.0",
+        "laravel/horizon": "^5.18",
+        "mcamara/laravel-localization": "^1.8",
+        "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
+        "psr/simple-cache": "3.0",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-cookie-consent": "^3.2",
-        "spatie/laravel-package-tools": "^1.11",
-        "spatie/laravel-sitemap": "^6.1.0",
-        "symfony/http-client": "^6.0",
-        "symfony/postmark-mailer": "^6.0",
-        "flowframe/laravel-drift": "^0.1.0",
-        "spatie/schema-org": "^3.8",
-        "psr/simple-cache": "2.0",
-        "spatie/laravel-ignition": "^1.6",
+        "spatie/laravel-ignition": "^2.2",
+        "spatie/laravel-package-tools": "^1.15",
+        "spatie/laravel-sitemap": "^6.3",
+        "spatie/schema-org": "^3.14",
         "webbingbrasil/filament-2fa": "^1.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.1",
-        "orchestra/testbench": "^6.22",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "nunomaduro/collision": "^7.0",
+        "orchestra/testbench": "^8.5",
+        "pestphp/pest": "^2.8",
+        "pestphp/pest-plugin-laravel": "^2.0",
+        "phpunit/phpunit": "^10.2",
+        "spatie/laravel-ray": "^1.32"
     },
     "autoload": {
         "psr-4": {
@@ -64,7 +62,10 @@
         "test-coverage": "vendor/bin/pest coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
