--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "filament/spatie-laravel-translatable-plugin": "^2.17",
         "flowframe/laravel-drift": "^0.2.0",
         "laravel/horizon": "^5.18",
+        "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
         "psr/simple-cache": "3.0",
