--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^8.2",
+        "friendsofphp/php-cs-fixer": "^3.21",
         "awcodes/filament-tiptap-editor": "^2.6",
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.17",
