--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,6 @@
     "require": {
         "php": "^8.2",
         "awcodes/filament-tiptap-editor": "^2.6",
-        "coconutcraig/laravel-postmark": "^3.0",
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.17",
         "filament/spatie-laravel-translatable-plugin": "^2.17",
@@ -35,7 +34,9 @@
         "spatie/laravel-package-tools": "^1.15",
         "spatie/laravel-sitemap": "^6.3",
         "spatie/schema-org": "^3.14",
-        "webbingbrasil/filament-2fa": "^1.0"
+        "webbingbrasil/filament-2fa": "^1.0",
+        "symfony/http-client": "*",
+        "symfony/postmark-mailer": "*"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.0",
