--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,14 +1,14 @@
 blank_issues_enabled: false
 contact_links:
   - name: Ask a question
-    url: https://github.com/Qubiqx/Qcommerce core/discussions/new?category=q-a
+    url: https://github.com/dashed/dashed core/discussions/new?category=q-a
     about: Ask the community for help
   - name: Request a feature
-    url: https://github.com/Qubiqx/Qcommerce core/discussions/new?category=ideas
+    url: https://github.com/dashed/dashed core/discussions/new?category=ideas
     about: Share ideas for new features
   - name: Report a security issue
-    url: https://github.com/Qubiqx/Qcommerce core/security/policy
+    url: https://github.com/dashed/dashed core/security/policy
     about: Learn how to notify us for sensitive bugs
   - name: Report a bug
-    url: https://github.com/Qubiqx/Qcommerce core/issues/new
+    url: https://github.com/dashed/dashed core/issues/new
     about: Report a reproducable bug
