--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
-        "cross-env": "^7.0",
-        "laravel-mix": "^6.0.39",
+        "@tailwindcss/forms": "^0.5.4",
+        "@tailwindcss/typography": "^0.5.9",
+        "alpinejs": "^3.10.4",
+        "aos": "^2.3.4",
+        "autoprefixer": "^10.4.14",
+        "axios": "^0.27",
         "lodash": "^4.17.19",
-        "postcss": "^8.4.5",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.32.8",
-        "sass-loader": "^8.0.2",
-        "tailwindcss": "^3.0.7",
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.0"
+        "tailwindcss": "^3.3.3",
+        "tippy.js": "^6.3.7",
+        "vite": "^3.0.0",
+        "laravel-vite-plugin": "^0.7.0",
+        "postcss": "^8.1.14"
     }
 }
