--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.4",
@@ -16,6 +21,7 @@
         "tippy.js": "^6.3.7",
         "vite": "^3.0.0",
         "laravel-vite-plugin": "^0.7.0",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "laravel-mix": "^6.0.39"
     }
 }
