--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "flowframe/laravel-drift": "^0.2.0",
         "friendsofphp/php-cs-fixer": "^3.21",
         "laravel/horizon": "^5.18",
+        "league/flysystem-aws-s3-v3": "^3.15",
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
         "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
