--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,16 @@
     ],
     "require": {
         "php": "^8.2",
-        "awcodes/filament-tiptap-editor": "^2.6",
+        "awcodes/filament-tiptap-editor": "^3.0",
         "dashed/laravel-drift": "^1.0",
         "doctrine/dbal": "^3.3",
-        "filament/filament": "^2.17",
-        "filament/spatie-laravel-translatable-plugin": "^2.17",
+        "filament/filament": "^3.0-stable",
+        "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
         "friendsofphp/php-cs-fixer": "^3.21",
         "laravel/horizon": "^5.18",
         "league/flysystem-aws-s3-v3": "^3.15",
-        "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
-        "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
+        "mohamedsabil83/filament-forms-tinyeditor": "^2.0",
         "psr/simple-cache": "3.0",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-cookie-consent": "^3.2",
@@ -36,8 +35,7 @@
         "spatie/laravel-sitemap": "^6.3",
         "spatie/schema-org": "^3.14",
         "symfony/http-client": "*",
-        "symfony/postmark-mailer": "*",
-        "webbingbrasil/filament-2fa": "^1.0"
+        "symfony/postmark-mailer": "*"
     },
     "require-dev": {
         "nunomaduro/collision": "^7.0",
