--- a/composer.json
+++ b/composer.json
@@ -16,36 +16,33 @@
         }
     ],
     "require": {
-        "php": "^8.2",
-        "awcodes/filament-tiptap-editor": "^3.0",
+        "php": "^8.3",
+        "awcodes/filament-tiptap-editor": "^3.4",
         "binafy/laravel-stub": "^1.0",
         "dashed/laravel-drift": "^1.0",
         "dashed/laravel-seo-scanner": "dev-main",
-        "doctrine/dbal": "^3.3",
-        "filament/filament": "^3.0-stable",
-        "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
+        "doctrine/dbal": "^4.1",
+        "filament/filament": "^3.2",
+        "filament/spatie-laravel-translatable-plugin": "^3.2",
         "flowframe/laravel-trend": "^0.2.0",
-        "friendsofphp/php-cs-fixer": "^3.21",
-        "laravel/horizon": "^5.18",
-        "league/flysystem-aws-s3-v3": "^3.15",
-        "mcamara/laravel-localization": "^1.8",
-        "psr/simple-cache": "3.0",
-        "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-cookie-consent": "^3.2",
-        "spatie/laravel-ignition": "^2.2",
-        "spatie/laravel-package-tools": "^1.15",
-        "spatie/laravel-sitemap": "^6.3",
-        "spatie/schema-org": "^3.14",
-        "symfony/http-client": "*",
-        "symfony/postmark-mailer": "*"
+        "laravel/horizon": "^5.27",
+        "league/flysystem-aws-s3-v3": "^3.28",
+        "mcamara/laravel-localization": "^2.0",
+        "psr/simple-cache": "^3.0",
+        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-cookie-consent": "^3.3",
+        "spatie/laravel-ignition": "^2.8",
+        "spatie/laravel-package-tools": "^1.16",
+        "spatie/laravel-sitemap": "^7.2",
+        "spatie/schema-org": "^3.23",
+        "symfony/http-client": "^7.1",
+        "symfony/postmark-mailer": "^7.1"
     },
     "require-dev": {
-        "nunomaduro/collision": "^7.0",
-        "orchestra/testbench": "^8.5",
-        "pestphp/pest": "^2.8",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpunit/phpunit": "^10.2",
-        "spatie/laravel-ray": "^1.32"
+        "friendsofphp/php-cs-fixer": "^3.63",
+        "orchestra/testbench": "^9",
+        "pestphp/pest": "^2.35",
+        "pestphp/pest-plugin-laravel": "^2.4"
     },
     "autoload": {
         "psr-4": {
