--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.63",
+        "laravel/pint": "^1.17",
         "orchestra/testbench": "^9",
         "pestphp/pest": "^2.35",
         "pestphp/pest-plugin-laravel": "^2.4"
