--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,4 +1,4 @@
-name: Check & fix styling
+name: Format code with PHP CS Fixer
 
 on: [push]
 
@@ -20,4 +20,4 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Fix styling
+          commit_message: Styling fixed with PHP CS Fixer
