--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "awcodes/filament-tiptap-editor": "^3.4",
         "binafy/laravel-stub": "^1.0",
         "dashed/laravel-drift": "^1.0",
+        "dashed/dashed-localization": "dev-master",
         "dashed/laravel-seo-scanner": "dev-main",
         "doctrine/dbal": "^4.1",
         "filament/filament": "^3.2",
@@ -27,7 +28,6 @@
         "flowframe/laravel-trend": "^0.2.0",
         "laravel/horizon": "^5.27",
         "league/flysystem-aws-s3-v3": "^3.28",
-        "mcamara/laravel-localization": "^2.0",
         "psr/simple-cache": "^3.0",
         "ryangjchandler/blade-cache-directive": "^1.0",
         "spatie/laravel-activitylog": "^4.8",
