--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.3",
+        "php": "^8.4",
         "awcodes/filament-tiptap-editor": "^3.4",
         "binafy/laravel-stub": "^1.0",
         "dashed/laravel-drift": "^1.0",
@@ -25,25 +25,25 @@
         "doctrine/dbal": "^4.1",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
-        "flowframe/laravel-trend": "^0.2.0",
-        "laravel/horizon": "^5.27",
-        "league/flysystem-aws-s3-v3": "^3.28",
+        "flowframe/laravel-trend": "^0.3",
+        "laravel/horizon": "^5.29",
+        "league/flysystem-aws-s3-v3": "^3.29",
         "psr/simple-cache": "^3.0",
         "ryangjchandler/blade-cache-directive": "^1.0",
-        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-cookie-consent": "^3.3",
         "spatie/laravel-ignition": "^2.8",
         "spatie/laravel-package-tools": "^1.16",
-        "spatie/laravel-sitemap": "^7.2",
         "spatie/schema-org": "^3.23",
         "symfony/http-client": "^7.1",
-        "symfony/postmark-mailer": "^7.1"
+        "symfony/postmark-mailer": "^7.1",
+        "ultrono/laravel-sitemap": "^9.4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.63",
-        "orchestra/testbench": "^9",
-        "pestphp/pest": "^2.35",
-        "pestphp/pest-plugin-laravel": "^2.4"
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "orchestra/testbench": "^9.6",
+        "pestphp/pest": "^3.5",
+        "pestphp/pest-plugin-laravel": "^3.0"
     },
     "autoload": {
         "psr-4": {
