--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "spatie/laravel-ignition": "^2.8",
         "spatie/laravel-package-tools": "^1.16",
         "spatie/schema-org": "^3.23",
+        "stephenjude/filament-debugger": "^3.1",
         "symfony/http-client": "^7.1",
         "symfony/postmark-mailer": "^7.1",
         "ultrono/laravel-sitemap": "^9.4"
