--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^8.4",
+        "php": "^8.3|^8.4",
         "awcodes/filament-tiptap-editor": "^3.4",
         "binafy/laravel-stub": "^1.0",
         "dashed/laravel-drift": "^1.0",
@@ -35,10 +35,8 @@
         "spatie/laravel-ignition": "^2.8",
         "spatie/laravel-package-tools": "^1.16",
         "spatie/schema-org": "^3.23",
-        "stephenjude/filament-debugger": "^3.1",
         "symfony/http-client": "^7.1",
-        "symfony/postmark-mailer": "^7.1",
-        "ultrono/laravel-sitemap": "^9.4"
+        "symfony/postmark-mailer": "^7.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
