--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "spatie/laravel-cookie-consent": "^3.3",
         "spatie/laravel-ignition": "^2.8",
         "spatie/laravel-package-tools": "^1.16",
+        "spatie/laravel-sitemap": "^7.2",
         "spatie/schema-org": "^3.23",
         "symfony/http-client": "^7.1",
         "symfony/postmark-mailer": "^7.1"
