--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "flowframe/laravel-trend": "^0.3",
         "laravel/horizon": "^5.29",
         "league/flysystem-aws-s3-v3": "^3.29",
+        "mallardduck/blade-lucide-icons": "^1.23",
         "psr/simple-cache": "^3.0",
         "ryangjchandler/blade-cache-directive": "^1.0",
         "spatie/laravel-activitylog": "^4.9",
