--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "ralphjsmit/packages": true
         }
     },
     "extra": {
