--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "ryangjchandler/blade-cache-directive": "^1.0",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-cookie-consent": "^3.3",
-        "spatie/laravel-ignition": "^2.8",
+        "spatie/laravel-flare": "^2.0",
         "spatie/laravel-package-tools": "^1.16",
         "spatie/laravel-sitemap": "^7.2",
         "spatie/schema-org": "^3.23",
