--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "laravel/horizon": "^5.29",
         "league/flysystem-aws-s3-v3": "^3.29",
         "mallardduck/blade-lucide-icons": "^1.23",
+        "openai-php/client": "^0.14.0",
         "psr/simple-cache": "^3.0",
         "pxlrbt/filament-excel": "^2.3",
         "ryangjchandler/blade-cache-directive": "^1.0",
@@ -66,6 +67,7 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
+            "php-http/discovery": true,
             "ralphjsmit/packages": true
         }
     },
