--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,21 @@
         }
     ],
     "require": {
-        "php": "^8.3|^8.4",
-        "awcodes/filament-tiptap-editor": "^3.4",
+        "php": "^8.4",
         "binafy/laravel-stub": "^1.0",
         "dashed/laravel-drift": "^1.0",
         "dashed/laravel-localization": "^1.0",
         "doctrine/dbal": "^4.1",
-        "filament/filament": "^3.2",
-        "filament/spatie-laravel-translatable-plugin": "^3.2",
+        "filament/filament": "^4.0",
         "flowframe/laravel-trend": "^0.4|^0.3",
-        "guava/filament-icon-picker": "^2.0",
+        "guava/filament-icon-picker": "^3.0",
+        "lara-zeus/spatie-translatable": "^1.0",
         "laravel/horizon": "^5.29",
         "league/flysystem-aws-s3-v3": "^3.29",
         "mallardduck/blade-lucide-icons": "^1.23",
         "openai-php/client": "^0.14.0",
         "psr/simple-cache": "^3.0",
-        "pxlrbt/filament-excel": "^2.3",
+        "pxlrbt/filament-excel": "^3.0",
         "ryangjchandler/blade-cache-directive": "^1.0",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-cookie-consent": "^3.3",
@@ -44,6 +43,7 @@
         "symfony/postmark-mailer": "^7.1"
     },
     "require-dev": {
+        "filament/upgrade": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.65",
         "orchestra/testbench": "^9.6",
         "pestphp/pest": "^3.5",
