--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "license": "ISC",
     "dependencies": {
         "@tiptap/core": "^3.9.0",
+        "@tiptap/extension-blockquote": "^3.13.0",
+        "@tiptap/extension-code-block": "^3.13.0",
+        "@tiptap/extension-heading": "^3.13.0",
+        "@tiptap/extension-list-item": "^3.13.0",
+        "@tiptap/extension-paragraph": "^3.13.0",
         "accepts": "^1.3.8",
         "acorn": "^8.12.1",
         "acorn-import-attributes": "^1.9.5",
