--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "doctrine/dbal": "^4.1",
         "filament/filament": "^4.0",
         "flowframe/laravel-trend": "^0.4|^0.3",
+        "google/apiclient": "^2.0",
         "guava/filament-icon-picker": "^3.0",
         "lara-zeus/spatie-translatable": "^1.0",
         "laravel/horizon": "^5.29",
